# PW-TrafficSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: SimulationWindow.cpp  SimulationWindow.h  main.cpp
src/map/: Entity.cpp  Entity.h  Map.cpp  Map.h  Window.cpp  Window.h
src/sim/: TrafficDispatcher.cpp  TrafficDispatcher.h  TrafficEntity.cpp  TrafficEntity.h  TrafficNode.cpp  TrafficNode.h  TrafficSimulation.cpp  TrafficSimulation.h
src/sim/dispatchers/: MatrixDispatcher.cpp  MatrixDispatcher.h  OneWayJoinDispatcher.h  OneWaySplitDispatcher.h  OneWayStraightDispatcher.h  TwoOneCrossingDispatcher.h  TwoWayStraightDispatcher.h  TwoWayTripleJunctionDispatcher.h  WeirdTripleJunctionDispatcher.h
src/vis/: Entity.cpp  Entity.h  Map.cpp  Map.h  MapSegment.h  Window.cpp  Window.h
src/vis/entities/: Car.h  Entity.cpp  Entity.h  Pedestrian.h
src/vis/segments/: OneWayCrossing.cpp  OneWayCrossing.h  OneWayJoinJunction.cpp  OneWayJoinJunction.h  OneWayJoinTJunction.cpp  OneWayJoinTJunction.h  OneWayRoad.cpp  OneWayRoad.h  OneWayRoadCorner.cpp  OneWayRoadCorner.h  OneWaySplitJunction.cpp  OneWaySplitJunction.h  OneWaySplitTJunction.cpp  OneWaySplitTJunction.h  Sidewalk.cpp  Sidewalk.h  SidewalkCorner.cpp  SidewalkCorner.h  TwoWayRoad.cpp  TwoWayRoad.h  TwoWayTJunction.cpp  TwoWayTJunction.h  WeirdTJunction.cpp  WeirdTJunction.h
